@@ -1,11 +1,15 @@
 package com.surveyplatform.app.mapper;
 
+import com.surveyplatform.app.dto.CrmProspectDto;
+import com.surveyplatform.app.dto.FacebookMarketPlaceDto;
 import com.surveyplatform.app.dto.FbMarketplaceVehicleDto;
 import com.surveyplatform.app.dto.ReferralDto;
 import com.surveyplatform.app.dto.ShowroomVisitDto;
 import com.surveyplatform.app.dto.SubmittedFormDto;
 import com.surveyplatform.app.dto.TradeInDto;
 import com.surveyplatform.app.dto.VehicleDto;
+import com.surveyplatform.app.persistance.entities.CrmProspect;
+import com.surveyplatform.app.persistance.entities.FacebookMarketPlace;
 import com.surveyplatform.app.persistance.entities.FbMarketplaceVehicle;
 import com.surveyplatform.app.persistance.entities.FormularioCustomerNeed;
 import com.surveyplatform.app.persistance.entities.FormularioDailyPlanner;
@@ -21,7 +25,6 @@ import org.mapstruct.Mapping;
 import org.mapstruct.factory.Mappers;
 
 import java.time.LocalDate;
-import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -38,13 +41,11 @@ public interface ManagementMapper {
     @Mapping(source = "tracking", target = "tracking")
     @Mapping(source = "goal", target = "goal")
     @Mapping(source = "plusOrMinusGoal", target = "plusOrMinusGoal")
-
     @Mapping(target = "vehicles", ignore = true)
     @Mapping(target = "showroomVisits", ignore = true)
     @Mapping(target = "fbMarketplaceVehicles", ignore = true)
     @Mapping(target = "tradeIns", ignore = true)
     @Mapping(target = "referrals", ignore = true)
-        // Assuming a separate method to map the vehicles list
     FormularioDailyPlanner toDailyPlannerEntity(SubmittedFormDto submittedFormDto);
 
     @Mapping(source = "name", target = "name")
@@ -62,9 +63,6 @@ public interface ManagementMapper {
     ShowroomVisit toShowroomVisitEntity(ShowroomVisitDto showroomVisitDto);
 
     default List<Vehicle> mapVehicles(List<VehicleDto> vehicleDtos, FormularioDailyPlanner dailyPlanner) {
-        if (vehicleDtos == null) {
-            return null;
-        }
         return vehicleDtos.stream()
                 .map(vehicleDto -> {
                     Vehicle vehicle = toVehicleEntity(vehicleDto);
@@ -75,16 +73,13 @@ public interface ManagementMapper {
     }
 
     default List<ShowroomVisit> mapShowroomVisits(List<ShowroomVisitDto> showroomVisitDtos, FormularioDailyPlanner dailyPlanner) {
-        if (showroomVisitDtos == null) {
-            return null;
-        }
         return showroomVisitDtos.stream()
                 .map(showroomVisitDto -> {
                     ShowroomVisit visit = toShowroomVisitEntity(showroomVisitDto);
                     visit.setFormularioDailyPlanner(dailyPlanner);
                     return visit;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Mapping(source = "fbStockNumber", target = "fbStockNumber")
@@ -94,16 +89,13 @@ public interface ManagementMapper {
     FbMarketplaceVehicle toFbMarketplaceVehicleEntity(FbMarketplaceVehicleDto fbMarketplaceVehicleDto);
 
     default List<FbMarketplaceVehicle> mapFbMarketplaceVehicles(List<FbMarketplaceVehicleDto> vehicleDtos, FormularioDailyPlanner dailyPlanner) {
-        if (vehicleDtos == null) {
-            return null;
-        }
         return vehicleDtos.stream()
                 .map(vehicleDto -> {
                     FbMarketplaceVehicle vehicle = toFbMarketplaceVehicleEntity(vehicleDto);
                     vehicle.setFormularioDailyPlanner(dailyPlanner);
                     return vehicle;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Mapping(source = "tradeInYear", target = "tradeInYear")
@@ -115,16 +107,13 @@ public interface ManagementMapper {
     TradeIn toTradeInEntity(TradeInDto tradeInDto);
 
     default List<TradeIn> mapTradeIns(List<TradeInDto> tradeInDtos, FormularioDailyPlanner dailyPlanner) {
-        if (tradeInDtos == null) {
-            return null;
-        }
         return tradeInDtos.stream()
                 .map(tradeInDto -> {
                     TradeIn tradeIn = toTradeInEntity(tradeInDto);
                     tradeIn.setFormularioDailyPlanner(dailyPlanner);
                     return tradeIn;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Mapping(source = "referralFirstName", target = "referralFirstName")
@@ -133,17 +122,15 @@ public interface ManagementMapper {
     Referral toReferralEntity(ReferralDto referralDto);
 
     default List<Referral> mapReferrals(List<ReferralDto> referralDtos, FormularioDailyPlanner dailyPlanner) {
-        if (referralDtos == null) {
-            return null;
-        }
         return referralDtos.stream()
                 .map(referralDto -> {
                     Referral referral = toReferralEntity(referralDto);
                     referral.setFormularioDailyPlanner(dailyPlanner);
                     return referral;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
+
     default FormularioDailyPlanner toDailyPlannerEntityWithDetails(SubmittedFormDto submittedFormDto) {
         FormularioDailyPlanner dailyPlanner = toDailyPlannerEntity(submittedFormDto);
         List<Vehicle> vehicles = mapVehicles(submittedFormDto.getVehicles(), dailyPlanner);
@@ -221,13 +208,8 @@ public interface ManagementMapper {
     @Mapping(source = "colleaguePostsShared", target = "colleaguePostsShared")
     @Mapping(source = "customerTradeInsPhotos", target = "customerTradeInsPhotos")
     @Mapping(source = "sharedContentFound", target = "sharedContentFound")
-    @Mapping(source = "facebookMarketPlaceVehicle", target = "vehicle")
-    @Mapping(source = "facebookMarketPlaceMake", target = "make")
-    @Mapping(source = "facebookMarketPlaceModel", target = "model")
-    @Mapping(source = "facebookMarketPlaceStockNumber", target = "stockNumber")
-    @Mapping(source = "crmProspectNumber", target = "crmCustomerNumber")
-    @Mapping(source = "crmProspectFirstName", target = "prospectFirstName")
-    @Mapping(source = "crmProspectLastName", target = "prospectLastName")
+    @Mapping(ignore = true, target = "facebookMarketPlaceEntries")
+    @Mapping(ignore = true, target = "crmProspects")
     @Mapping(source = "newCarsLeads", target = "newCarsLeads")
     @Mapping(source = "preOwnedLeads", target = "preOwnedLeads")
     @Mapping(source = "newVehiclesDelivered", target = "newVehiclesDelivered")
@@ -236,7 +218,52 @@ public interface ManagementMapper {
     @Mapping(source = "newVehicleLastSaleDay", target = "newVehicleLastSaleDay")
     @Mapping(source = "preOwnedVehiclesDelivered", target = "preOwnedVehiclesDelivered")
     @Mapping(source = "dpFinalsSold", target = "dpFinalsSold")
-    FormularioEndOfDay toEndOfDayEntity(SubmittedFormDto submittedFormDto);
+    FormularioEndOfDay toFormularioEndOfDay(SubmittedFormDto submittedFormDto);
+
+    @Mapping(source = "vehicle", target = "vehicle")
+    @Mapping(source = "make", target = "make")
+    @Mapping(source = "model", target = "model")
+    @Mapping(source = "stockNumber", target = "stockNumber")
+    FacebookMarketPlace toFacebookMarketPlaceEntity(FacebookMarketPlaceDto dto);
+
+    default List<FacebookMarketPlace> mapFacebookMarketPlaceEntries(List<FacebookMarketPlaceDto> dtos, FormularioEndOfDay formularioEndOfDay) {
+        return dtos.stream()
+                .map(dto -> {
+                    FacebookMarketPlace entry = toFacebookMarketPlaceEntity(dto);
+                    entry.setFormularioEndOfDay(formularioEndOfDay);
+                    return entry;
+                })
+                .toList();
+    }
+
+    @Mapping(source = "prospectFirstName", target = "prospectFirstName")
+    @Mapping(source = "prospectLastName", target = "prospectLastName")
+    @Mapping(source = "crmCustomerNumber", target = "crmCustomerNumber")
+    CrmProspect toCrmProspectEntity(CrmProspectDto dto);
+
+    default List<CrmProspect> mapCrmProspects(List<CrmProspectDto> dtos, FormularioEndOfDay formularioEndOfDay) {
+        if (dtos == null) {
+            return null;
+        }
+        return dtos.stream()
+                .map(dto -> {
+                    CrmProspect entry = toCrmProspectEntity(dto);
+                    entry.setFormularioEndOfDay(formularioEndOfDay);
+                    return entry;
+                })
+                .collect(Collectors.toList());
+    }
+
+    default FormularioEndOfDay toFormularioEndOfDayEntityWithDetails(SubmittedFormDto submittedFormDto) {
+        FormularioEndOfDay formularioEndOfDay = toFormularioEndOfDay(submittedFormDto);
+        List<FacebookMarketPlace> facebookMarketPlaceEntries = mapFacebookMarketPlaceEntries(submittedFormDto.getFacebookMarketPlace(), formularioEndOfDay);
+        List<CrmProspect> crmProspects = mapCrmProspects(submittedFormDto.getCrmProspects(), formularioEndOfDay);
+
+        formularioEndOfDay.setFacebookMarketPlaceEntries(facebookMarketPlaceEntries);
+        formularioEndOfDay.setCrmProspects(crmProspects);
+
+        return formularioEndOfDay;
+    }
 
     @Mapping(source = "guestNameFirst", target = "guestNameFirst")
     @Mapping(source = "guestNameLast", target = "guestNameLast")
@@ -253,20 +280,6 @@ public interface ManagementMapper {
     @Mapping(source = "gdprConsent", target = "gdprConsent")
     @Mapping(source = "privacyConsent", target = "privacyConsent")
     FormularioSsi1000 toSsi1000Entity(SubmittedFormDto submittedFormDto);
-
-    default LocalTime toLocalTime(String hour, String minute, String amPm) {
-        if (hour == null || minute == null || amPm == null) {
-            return null;
-        }
-        int hourInt = Integer.parseInt(hour);
-        int minuteInt = Integer.parseInt(minute);
-        if ("PM".equalsIgnoreCase(amPm) && hourInt != 12) {
-            hourInt += 12;
-        } else if ("AM".equalsIgnoreCase(amPm) && hourInt == 12) {
-            hourInt = 0; // 12 AM is 00:00 in 24-hour time
-        }
-        return LocalTime.of(hourInt, minuteInt);
-    }
 
     default LocalDate stringToLocalDate(String date) {
         if (null == date) {
